# authd

./: .gitignore  .gitmodules  Cargo.toml  go.mod  gotestcov
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/scripts/: compute-deb-build-hash.sh
.github/workflows/: automatic-doc-checks.yaml  brokers-qa.yaml  brokers-qa.yml  build-broker-snap.yaml  build-deb.yaml  debian-build-test-and-sync.yaml  debian-build.yaml  debian.yaml  e2e-tests-provision-and-run.yaml  e2e-tests-run.yaml  e2e-tests.yaml  oci-artifacts-cleanup.yaml  provision-e2e-test.yaml  provision-e2e-vm.yml  qa.yaml  run-e2e-test.yaml  run-e2e-tests.yaml  tics-run.yaml  update-broker-variant-branches.yaml  update-broker-variant-branches.yml  validate-dependabot.yaml
authd-oidc-brokers/: go.mod  go.sum  rust-toolchain.toml
authd-oidc-brokers/tools/: go.mod
cmd/authctl/: main.go  main_test.go
debian/: changelog  control  copyright  lintian-overrides  lrc.config  manpages  rules
dev/: DEV-GUIDE.md  cloud-init.yaml  dev-env.sh  install-authd.sh  install-broker.sh
docs/: .custom_wordlist.txt  index.md
docs/explanation/: authd-architecture.md  index.md
docs/howto/: configure-authd.md  install-authd.md  logging.md
docs/reference/: identity-providers.md  index.md
e2e-tests/: install-deps.sh  run-tests.sh  testing.md
e2e-tests/r2-worker/: wrangler.toml
e2e-tests/tests/: authd_disabled.robot  login.robot  (+14 more)
examplebroker/: broker.go
man/: authctl.1  generate.go
scripts/: generate-vendored-copyright
snap/: snapcraft.yaml
tools/: generate-proto.sh  go.mod  go.sum
(+140 files in other folders)
